# clovis-converter

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml
src/: HTML parser.py  README.md  Word fiche de philo.py  clovis_to_clovis.py  clovis_to_clovis.pyi  clovis_to_clovis_test.py  clovis_to_md.py  clovis_to_tex.py  clovis_to_tex_test.py  common.py  common.pyi  file_to_convert.html  latex.py  md_to_clovis.py  test.go  test.tex
src/common/: __init__.py
src/editorjs/: README.md  handlers.py  output.html  temp.json  temp.py  utils.py
src/from_clovis/: to_clovis.py  to_clovis.pyi  to_md.py  to_tex.py  to_tex.pyi
src/from_md/: to_clovis.py
src/old_files/: HTML parser.py  Word conversion code.py  Word fiche de philo.py  latex.py
tests/: __init__.py  utils.py
tests/assets/: README.md
tests/assets/study-sheet/: README.md  study-sheet-example.html  study-sheet-example.md
tests/assets/study-sheet/block/core/: colorful-block.html  colorful-block.tex  definition.html  definition.tex  h1-old.html  h1.html  h1.tex  h2-old.html
tests/assets/study-sheet/block/subject/: katex-code.html  katex-code.tex  katex-inline-code.html  katex-inline-code.tex
tests/assets/study-sheet/inline-style/b/: clovis-old.html  clovis.html  tex.tex
tests/assets/study-sheet/inline-style/hl-yellow/: clovis-old.html  clovis.html  tex.tex
tests/clovis_to_clovis/: clovis_to_clovis_test.py  test.py
tests/clovis_to_tex/: clovis_to_tex_test.py  test.py
tests/from_clovis/: to_clovis_test.py  to_tex_test.py
(+19 files in other folders)
