[tool.poetry]
name = "clovis-converter"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
bs4 = "^0.0.1"
pytest = "^7.1.3"
mistune = "^2.0.4"

[tool.poetry.dev-dependencies]
types-beautifulsoup4 = "^4.11.1"
tox = "^4.4.6"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
