[tool.poetry]
name = "clovis-converter"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pytest = "^7.1.3"
mistune = "^2.0.4"
beautifulsoup4 = "^4.11.2"

[tool.poetry.group.dev.dependencies]
types-beautifulsoup4 = "^4.11.1"
tox = "^4.4.6"
black = "^23.1.0"
flake8 = "^6.0.0"
mypy = "^1.0.1"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
