[project]
name = "clovis-converter"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "mistune>=3.1.3",
]
license = "MIT"

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "pytest>=8.3.5",
    "ruff>=0.11.4",
    "types-beautifulsoup4>=4.12.0.20250204",
]

[tool.mypy]
strict = true
